--- a/Desktop/web-dev-lab/style.css
+++ b/Desktop/web-dev-lab/style.css
@@ -6,6 +6,8 @@
             padding: 0;
         }
         header {
+
+                display: flex;
             background: #35424a;
             color: #ffffff;
             padding: 10px 0;
